fix alignment of text

--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -327,7 +327,7 @@ background-size: cover;
     color: #fff;
     font-weight: bold;
     position: relative;
-    right: -45px;
+    right: -37px;
     bottom: -38px;
 
 }
